--- a/pom.xml
+++ b/pom.xml
@@ -18,32 +18,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.intuit.karate</groupId>
+      <groupId>io.karatelabs</groupId>
       <artifactId>karate-junit5</artifactId>
-      <version>${karate.version}</version>
-      <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <artifactId>js</artifactId>
-          <groupId>org.graalvm.js</groupId>
-        </exclusion>
-        <exclusion>
-          <artifactId>js-scriptengine</artifactId>
-          <groupId>org.graalvm.js</groupId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.graalvm.js</groupId>
-      <artifactId>js-scriptengine</artifactId>
-      <version>${graalvm.js.version}</version>
-      <type>pom</type>
-    </dependency>
-    <dependency>
-      <groupId>org.graalvm.js</groupId>
-      <artifactId>js</artifactId>
-      <version>${graalvm.js.version}</version>
-      <type>pom</type>
+      <version>1.5.0</version>
     </dependency>
   </dependencies>
 
